feat: udistrital/sga_cliente#1102 ajuste modelo almacen config tags programas
- Se crean scripts de migrations up & down para creación de tabla `tags_por_dependencia`
- Se crea model & controller para tabla `tags_por_dependencia` siguiendo lineamientos_oas de refactor
- Se actualiza gráfico de modelo de datos _(dbm, sql, png)_ y enlace en README.md
- Se actualiza swagger y routers:

|ruta controlador|método|función|
|---|---|---|
|tags_por_dependencia/|POST|Post()|
|tags_por_dependencia/:id|GET|GetOne()|
|tags_por_dependencia/|GET|GetAll()|
|tags_por_dependencia/:id|PUT|Put()|
|tags_por_dependencia/:id|DELETE|Delete()|
