# swagger/swagger.yml
@@ -32,8 +32,7 @@ paths:
         type: string
       - in: query
         name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
         type: string
       - in: query
         name: limit
@@ -147,8 +146,7 @@ paths:
         type: string
       - in: query
         name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
         type: string
       - in: query
         name: limit
@@ -262,8 +260,7 @@ paths:
         type: string
       - in: query
         name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
         type: string
       - in: query
         name: limit
@@ -377,8 +374,7 @@ paths:
         type: string
       - in: query
         name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
         type: string
       - in: query
         name: limit
@@ -492,8 +488,7 @@ paths:
         type: string
       - in: query
         name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
         type: string
       - in: query
         name: limit
@@ -607,8 +602,7 @@ paths:
         type: string
       - in: query
         name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
         type: string
       - in: query
         name: limit
@@ -722,8 +716,7 @@ paths:
         type: string
       - in: query
         name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
         type: string
       - in: query
         name: limit
@@ -837,8 +830,7 @@ paths:
         type: string
       - in: query
         name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
         type: string
       - in: query
         name: limit
@@ -931,6 +923,120 @@ paths:
           description: '{string} delete success!'
         "404":
           description: not found resource
+  /tags_por_dependencia/:
+    get:
+      tags:
+      - tags_por_dependencia
+      description: get TagsPorDependencia
+      operationId: TagsPorDependenciaController.Get All
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TagsPorDependencia'
+        "404":
+          description: not found resource
+    post:
+      tags:
+      - tags_por_dependencia
+      description: create TagsPorDependencia
+      operationId: TagsPorDependenciaController.Post
+      parameters:
+      - in: body
+        name: body
+        description: body for TagsPorDependencia content
+        required: true
+        schema:
+          $ref: '#/definitions/models.TagsPorDependencia'
+      responses:
+        "201":
+          description: '{int} models.TagsPorDependencia'
+        "400":
+          description: the request contains incorrect syntax
+  /tags_por_dependencia/{id}:
+    get:
+      tags:
+      - tags_por_dependencia
+      description: get TagsPorDependencia by id
+      operationId: TagsPorDependenciaController.Get One
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TagsPorDependencia'
+        "404":
+          description: not found resource
+    put:
+      tags:
+      - tags_por_dependencia
+      description: update the TagsPorDependencia
+      operationId: TagsPorDependenciaController.Put
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to update
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for TagsPorDependencia content
+        required: true
+        schema:
+          $ref: '#/definitions/models.TagsPorDependencia'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TagsPorDependencia'
+        "400":
+          description: the request contains incorrect syntax
+    delete:
+      tags:
+      - tags_por_dependencia
+      description: delete the TagsPorDependencia
+      operationId: TagsPorDependenciaController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "404":
+          description: not found resource
   /tipo_entrevista/:
     get:
       tags:
@@ -952,8 +1058,7 @@ paths:
         type: string
       - in: query
         name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
         type: string
       - in: query
         name: limit
@@ -1235,6 +1340,27 @@ definitions:
         format: int64
       RequisitoId:
         $ref: '#/definitions/models.Requisito'
+  models.TagsPorDependencia:
+    title: TagsPorDependencia
+    type: object
+    properties:
+      Activo:
+        type: boolean
+      DependenciaId:
+        type: integer
+        format: int64
+      FechaCreacion:
+        type: string
+      FechaModificacion:
+        type: string
+      Id:
+        type: integer
+        format: int64
+      ListaTags:
+        type: string
+      PeriodoId:
+        type: integer
+        format: int64
   models.TipoEntrevista:
     title: TipoEntrevista
     type: object
@@ -1288,3 +1414,6 @@ tags:
 - name: detalle_evaluacion
   description: |
     DetalleEvaluacionController operations for DetalleEvaluacion
+- name: tags_por_dependencia
+  description: |
+    TagsPorDependenciaController operations for TagsPorDependencia
